@@ -25,6 +25,7 @@ from .event_rule import EventRuleStubber
 from .external_account import ExternalAccountStubber
 from .hosted_zone import HostedZoneStubber
 from .internet_gateway import InternetGatewayStubber
+from .key import KeyStubber
 from .keypair import KeyPairStubber
 from .launch_configuration import LaunchConfigurationStubber
 from .load_balancer import LoadBalancerStubber
@@ -55,6 +56,7 @@ __all__ = [
     'HostedZoneStubber',
     'InternetGatewayStubber',
     'KeyPairStubber',
+    'KeyStubber',
     'LaunchConfigurationStubber',
     'LoadBalancerStubber',
     'LogGroupStubber',
